# stoic-app

./: .gitignore  .prettierignore  config.py  main.py  pyproject.toml
app/: __init__.py
app/models/: __init__.py  entry.py  stoic_card.py  theme.py  user.py
app/routes/: auth.py  main.py
app/services/: ai.py
app/static/styles/: index.css
app/templates/: base.html  macros.html
app/templates/auth/: login.html  register.html
app/templates/journal/: history.html  index.html
